--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
 
             <p>
                 Somos especialistas em motor de partida e alternador.
-                Há anos atendendo com qualidade, compromisso e agilidade, oferecendo
+                Há 10 anos atendendo com qualidade, compromisso e agilidade, oferecendo
                 soluções completas para carros, caminhonetes, caminhoes e utilitários.
             </p>
 
@@ -409,4 +409,5 @@
 </a>
 </body>
 </html>
+
 
