--- a/index.html
+++ b/index.html
@@ -211,7 +211,7 @@
 
 <section class="servicos" id="servicos">
     <h2>Nossos Serviços</h2>
-    <p class="servicos-sub">Especializados em motor de partida, alternador e auto elétrica.</p>
+    <p class="servicos-sub">Especializados em motor de partida e alternador.</p>
 
     <div class="servicos-grid">
 
@@ -409,5 +409,6 @@
 </a>
 </body>
 </html>
+
 
 
