--- a/index.html
+++ b/index.html
@@ -193,8 +193,7 @@
             </p>
 
             <p>
-                Trabalhamos com serviços de reparo, diagnóstico, venda de peças,
-                testes avançados e manutenção completa — sempre com garantia e
+                Trabalhamos com serviços de reparo, diagnóstico, venda de peças e manutenção completa — sempre com garantia e
                 peças de confiança.
             </p>
 
@@ -409,6 +408,7 @@
 </a>
 </body>
 </html>
+
 
 
 
